--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 <body>
 
     <div id="chart-container">FusionCharts XT will load here!</div>
+    <div id="chart-container2">FusionCharts XT will load here!</div>
     <!--Value-->
     <pre id="Data"></pre>
     <!--Child-->
     <ul id = "list">
 
     </ul>
-    
+
     <script src="app.js"></script>
 
     
